feat: add commit crawler lambda files

--- a/template.yaml
+++ b/template.yaml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: >
-  mangum-test
+  github-get-commits
 
   Sample SAM Template for mangum-test
 
@@ -17,67 +17,20 @@ Resources:
         LicenseInfo: 'MIT'
         RetentionPolicy: Retain
 
-  MangumTestApi:
-    Type: AWS::ApiGateway::RestApi
-    Properties:
-      Name: MangumRestApi
-
-  MangumTestResource:
-    Type: AWS::ApiGateway::Resource
-    Properties:
-      ParentId: !GetAtt MangumTestApi.RootResourceId
-      RestApiId: !Ref MangumTestApi
-      PathPart: '{proxy+}'
-
-  MangumTestRootMethod:
-    Type: AWS::ApiGateway::Method
-    Properties:
-      HttpMethod: ANY
-      ResourceId: !GetAtt MangumTestApi.RootResourceId
-      RestApiId: !Ref MangumTestApi
-      AuthorizationType: NONE
-      Integration:
-        IntegrationHttpMethod: POST
-        Type: AWS_PROXY
-        Uri: !Sub
-          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn: !GetAtt ApiResourceFunction.Arn  
-        Credentials: 
-          Fn::Sub: 'arn:aws:iam::${AWS::AccountId}:role/apig-invoke-lambda-role'
-
-  MangumTestProxyMethod:
-    Type: AWS::ApiGateway::Method
-    Properties:
-      HttpMethod: ANY
-      ResourceId: !Ref MangumTestResource
-      RestApiId: !Ref MangumTestApi
-      AuthorizationType: NONE
-      Integration:
-        IntegrationHttpMethod: POST
-        Type: AWS_PROXY
-        Uri: !Sub
-          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn: !GetAtt ApiResourceFunction.Arn
-        Credentials: 
-          Fn::Sub: 'arn:aws:iam::${AWS::AccountId}:role/apig-invoke-lambda-role' 
-
-  ApiResourceFunction:
+  GithubGetCommitsFunction:
     Type: AWS::Serverless::Function 
     Properties:
+      FunctionName: github-get-commits
       CodeUri: app
-      Handler: main.handler
-      Timeout: 3
+      Handler: handlers.get_commits
+      Timeout: 10
       Policies:
         - AWSLambdaFullAccess
       Layers:
         - !Ref DepLayer
-      Runtime: python3.8
-
-  Deployment:
-    DependsOn:
-    - MangumTestRootMethod
-    - MangumTestProxyMethod
-    Type: 'AWS::ApiGateway::Deployment'
-    Properties:
-      RestApiId: !Ref MangumTestApi
-      StageName: v1
+      Runtime: python3.8 
+      Events:
+        UpdateCommitsEvent:
+          Type: Schedule
+          Properties:
+            Schedule: cron(00 12 ? * MON-FRI *)
