--- a/template.yaml
+++ b/template.yaml
@@ -1,9 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: >
-  github-get-commits
-
-  Sample SAM Template for mangum-test
+Description: github-get-commits job
 
 Resources:
   DepLayer:
